Web MIDI: fix a regression of r430234

This issue depends on platform on that how devices are initialized,
but at least on macOS, this causes problems that devices
get not responsive.

BUG=663501

Review-Url: https://codereview.chromium.org/2487113002
Cr-Commit-Position: refs/heads/master@{#431851}

Former-commit-id: ac5d7642d517d225a02d66804a26a49a9bb4567e