components/test_runner/mock_web_midi_accessor.h
@@ -22,8 +22,8 @@ class TestInterfaces;
 
 class MockWebMIDIAccessor : public blink::WebMIDIAccessor {
  public:
-  explicit MockWebMIDIAccessor(blink::WebMIDIAccessorClient* client,
-                               TestInterfaces* interfaces);
+  MockWebMIDIAccessor(blink::WebMIDIAccessorClient* client,
+                      TestInterfaces* interfaces);
   ~MockWebMIDIAccessor() override;
 
   // blink::WebMIDIAccessor implementation.
@@ -34,10 +34,14 @@ class MockWebMIDIAccessor : public blink::WebMIDIAccessor {
                     double timestamp) override;
 
  private:
-  void ReportStartedSession(midi::mojom::Result result);
+  void addInputPort(midi::mojom::PortState state);
+  void addOutputPort(midi::mojom::PortState state);
+  void reportStartedSession(midi::mojom::Result result);
 
   blink::WebMIDIAccessorClient* client_;
   TestInterfaces* interfaces_;
+  unsigned next_input_port_index_;
+  unsigned next_output_port_index_;
 
   base::WeakPtrFactory<MockWebMIDIAccessor> weak_factory_;
 
